labs/scenario/load-balancers/alb-graceful-shutdown/k8s-deployment-netshoot.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netshoot-deployment
  namespace: load-balancers
spec:
  replicas: 3
  selector:
    matchLabels:
      app: netshoot
  template:
    metadata:
      labels:
        app: netshoot
    spec:
      containers:
        - name: netshoot
          image: nicolaka/netshoot
          command:
            - "/bin/sh"
          args:
            - "-c"
            - "while true; do echo $INGRESS_URL; sleep 10;done"
